<?xml version="1.0"?>
<package format="2">
    <name>orb_slam3</name>
    <version>1.0.1</version>
    <description>
        The ORB-SLAM3 package
    </description>
    <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>opencv4</depend>
    <depend>eigen</depend>
    <depend>pangolin</depend>
    <depend>librealsense2</depend>

    <export>
        <nodelet plugin="${prefix}/nodes.xml" />
    </export>
</package>
