<?xml version="1.0"?>
<package format="2">
  <name>orb_slam3</name>
  <version>1.0.2</version>
  <description>
     ORB_SLAM3
  </description>
  <author>Carlos Campos, Richard Elvira, Juan J. Gomez, Jose M.M. Montiel, Juan D. Tardos</author>
  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>
  <depend>eigen</depend>
  <depend>pangolin</depend>
  <depend>librealsense2</depend>
</package>
